--- a/styles/ML2.module.scss
+++ b/styles/ML2.module.scss
@@ -10,7 +10,7 @@
     margin-left:1rem;
 }
 
-@media (max-width: 750px) {
+@media (max-width: 760px) {
     .ML2 {
        display: none;
     }
