--- a/styles/Posts.module.scss
+++ b/styles/Posts.module.scss
@@ -1,7 +1,8 @@
 @import './variable';
 
 .postAll {
-    padding-bottom: 5rem;
+    margin-bottom: 5rem;
+    margin-top: 5rem;
 
     .right {
         text-align: right; 
@@ -37,7 +38,7 @@
     line-height: 35px;
     word-spacing: 0.8px;
     font-weight: 300;
-    padding-left: 5rem;
+    padding-left: 2rem;
     padding-right: 3rem;
     padding-top: 3rem;
     padding-bottom: 3rem;
