--- a/styles/TOC.module.scss
+++ b/styles/TOC.module.scss
@@ -3,7 +3,7 @@
 .all {
 
     position: fixed;
-    top: 8rem;
+    top: 10rem;
     left: 0;
     max-width: 280px;
     border: transparent;
